--- a/Main Page/main page.css
+++ b/Main Page/main page.css
@@ -2,50 +2,112 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: #f5f7fa93;
-  /* background-image: linear-gradient(to right, rgb(225, 0, 255) ,rgb(16, 255, 243));
-    font-family: 'Roboto', sans-serif;*/
- /* height: 1450px;*/
+  /* /* background-image: linear-gradient(to right, rgb(225, 0, 255) ,rgb(16, 255, 243)); */
+  font-family: 'Roboto', sans-serif;
+  /* height: 1450px;*/
 }
+
 header {
-    width: 100vw;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 2px 2px 20px 1px rgb(199, 193, 193);
-    flex-wrap: wrap;
-    position: fixed;
-    z-index: 1;
-  }
-.photo-1 {
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 20px 1px #c7c1c1;
+  position: fixed;
+  z-index: 1;
+}
+
+/* logo of univ*/
+.logo {
   width: 100px;
   height: 80px;
 }
+
+/* university name*/
 .h-1 {
   color: blueviolet;
-  
 }
+
 .fa-solid {
   color: #007bff;
   width: 25px;
 
 }
 
-.WAD {
-  width: 500px;
+main {
+  display: flex;
+  padding-top: 120px;
+  padding-inline: 20px;
+}
+
+main>div {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+/* nav STYLE */
+nav {
+  position: fixed;
+}
+
+nav h3 {
+  color: #063d77;
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.exam-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.exam-nav a {
+  font-size: large;
+  font-weight: 600;
+  text-decoration: none;
+  color: #aaa;
+  transition: .3s;
+  position: relative;
+  padding: 10px 5px;
+}
+
+.exam-nav a:hover {
+  color: #3f07a8;
+}
+
+.exam-nav a:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #3f07a8;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0 -10px 10px 0 #3f07a8;
+}
+
+
+main>div {}
+
+/* exam card */
+article {
+  width: 50%;
   padding: 25px;
   height: auto;
-  display: flex;
-  gap: 5px;
-  flex-direction: column;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 90px;
   border-radius: 20px;
   box-shadow: 1px 1px 10px 1px rgb(156, 152, 152);
   background-color: #ffffff;
 }
+
+
+/* Start exam button */
 .st-e {
   text-decoration: none;
   width: 450px;
@@ -57,11 +119,8 @@ header {
   text-align: center;
   border-radius: 20px;
 }
-span {
-  color: rgb(117, 122, 122);
-  margin-top: 6px;
-  margin-bottom: 6px;
-}
+
+
 p {
   color: rgb(117, 122, 122);
   margin-bottom: 25px;
@@ -71,6 +130,7 @@ p {
 a {
   text-decoration: none;
 }
+
 .type-qu-1 {
   padding: 10px;
   text-align: center;
@@ -83,6 +143,7 @@ a {
 
   color: aliceblue;
 }
+
 .type-qu-2 {
   padding: 10px;
   text-align: center;
@@ -95,23 +156,19 @@ a {
   color: aliceblue;
 }
 
-main {
-  padding: 50px;
-  position: relative;
-  top: 70px;
-}
 .foot {
-    position: relative;
-    top: 100px;
-padding-top:30px ;
-padding-bottom:30px ;
- /* border: 2px solid #007bff;*/
+  position: relative;
+  top: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  /* border: 2px solid #007bff;*/
   width: 100%;
   background-color: rgba(212, 208, 208, 0.555);
   display: flex;
   justify-content: space-around;
 
 }
-.h1-k{
-    color:rgb(0, 0, 0);
+
+.h1-k {
+  color: rgb(0, 0, 0);
 }
