--- a/Main Page/main page.css
+++ b/Main Page/main page.css
@@ -2,33 +2,38 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: #f5f7fa93;
-  /* /* background-image: linear-gradient(to right, rgb(225, 0, 255) ,rgb(16, 255, 243)); */
   font-family: 'Roboto', sans-serif;
-  /* height: 1450px;*/
+  position: relative;
 }
 
 header {
-  width: 100vw;
+  /* width: 100vw; */
   display: flex;
-  justify-content: space-around;
+  gap: 20px;
+  /* justify-content: center; */
+  align-items: center;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #ffffffbe;
+  backdrop-filter: blur(10px);
   box-shadow: 2px 2px 20px 1px #c7c1c1;
-  position: fixed;
+  position: sticky;
+  top: 0;
   z-index: 1;
 }
 
 /* logo of univ*/
 .logo {
-  width: 100px;
-  height: 80px;
+  width: 80px;
+  height: 60px;
 }
 
 /* university name*/
 .h-1 {
-  color: blueviolet;
+  color: black;
+  margin-block: 10px;
 }
 
+/* icons */
 .fa-solid {
   color: #007bff;
   width: 25px;
@@ -37,8 +42,7 @@ header {
 
 main {
   display: flex;
-  padding-top: 120px;
-  padding-inline: 20px;
+  padding: 10px 20px;
 }
 
 main>div {
@@ -46,7 +50,7 @@ main>div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 60px;
 }
 
 /* nav STYLE */
@@ -93,42 +97,67 @@ nav h3 {
   box-shadow: 0 -10px 10px 0 #3f07a8;
 }
 
-
-main>div {}
-
 /* exam card */
 article {
   width: 50%;
   padding: 25px;
   height: auto;
   border-radius: 20px;
-  box-shadow: 1px 1px 10px 1px rgb(156, 152, 152);
+  box-shadow: 1px 1px 10px 1px #9c9898;
   background-color: #ffffff;
 }
 
-
-/* Start exam button */
-.st-e {
-  text-decoration: none;
-  width: 450px;
-  height: auto;
-  padding: 15px;
-  margin-top: 20px;
-  background-color: #007bff;
-  color: white;
+article h1 {
+  color: #007bff;
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 20px;
   text-align: center;
-  border-radius: 20px;
+  margin-block: 5px;
 }
 
 
-p {
-  color: rgb(117, 122, 122);
-  margin-bottom: 25px;
-  font-size: 15px;
+article ul {
+  list-style: none;
+  /* padding: 0; */
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px 20px;
 }
 
-a {
+article ul li {
+  font-size: large;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  color: #555;
+  transition: .3s;
+}
+
+/* exam button */
+.btn {
+  display: flex;
+  justify-content: center;
+}
+
+
+.btn>a {
   text-decoration: none;
+  /* width: 450px; */
+  /* height: auto; */
+  padding: 10px 20%;
+  margin-top: 20px;
+  background-color: #063d77;
+  color: white;
+  font-weight: bold;
+  /* text-align: center; */
+  border-radius: 10px;
+  transition: .3s;
+}
+
+.btn>a:hover {
+  background-color: #136ac7;
 }
 
 .type-qu-1 {
