--- a/examPage/exam.css
+++ b/examPage/exam.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -89,7 +93,7 @@ header {
   gap: 20px;
 }
 
-.container .questions {
+.container #questions {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -98,7 +102,7 @@ header {
   margin-top: 20px;
 }
 
-.container .questions article {
+.container #questions article {
   width: 100%;
   border-radius: 10px;
   padding: 10px 20px;
@@ -106,13 +110,62 @@ header {
   box-shadow: 1px 1px 10px 1px #9c9898;
 }
 
-.container .questions article h3 {
-  color: #007bff;
-  margin-block: 10px;
-  margin-inline: 20px;
+.container #questions article .h-question {
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
-.container .questions article p {
-  text-align: center;
+article>.h-question em {
+  font-weight: bold;
+  font-size: small;
+  color: #777;
+}
+
+.container #questions article h3 {
+  color: #007bff;
   margin-block: 10px;
+  margin-left: 20px;
+}
+
+.container #questions article p {
+  text-align: center;
+  margin-block: 5px 16px;
+}
+
+article ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.submit-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-block: 20px;
+}
+
+#back,
+#submit {
+  padding: 8px 16px;
+  border-radius: 5px;
+  background-color: #06468b;
+  color: white;
+  border: none;
+  font-weight: bold;
+  font-size: medium;
+  transition: .3s;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+#back {
+  display: none;
+}
+
+#back:hover,
+#submit:hover {
+  background-color: rgb(32, 32, 194);
 }
