--- a/examPage/exam.css
+++ b/examPage/exam.css
@@ -99,16 +99,29 @@ header {
 }
 
 .container>div aside {
-  width: 90%;
+  width: 80%;
   /* height: 100%; */
   background-color: #f5f7fa93;
-  padding: 10px;
+  padding: 16px;
   box-shadow: 2px 2px 20px 1px #c7c1c1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   border-radius: 20px;
+}
+
+.container>div aside h1 {
+  color: #007bff;
+  margin-block: 20px;
+  text-align: center;
+}
+
+.container>div aside p {
+  text-align: center;
+  margin-block: 5px 16px;
+  line-height: 1.5;
+  font-weight: bold;
 }
 
 .container>main {
