--- a/examPage/exam.css
+++ b/examPage/exam.css
@@ -37,6 +37,11 @@ header {
   margin-block: 10px;
 }
 
+#studentName,
+#studentID {
+  font-weight: bold;
+  color: #103e6e;
+}
 
 .container {
   display: flex;
@@ -57,13 +62,13 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
   z-index: 1;
 }
 
 .container>nav h1 {
   color: #007bff;
-  margin-block: 20px;
+  margin-block: 10px;
   text-align: center;
 }
 
@@ -87,9 +92,7 @@ header {
   position: fixed;
   width: 15%;
   height: 100vh;
-  /* background-color: #fff; */
   padding: 10px;
-  /* box-shadow: 2px 2px 20px 1px #c7c1c1; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,7 +103,6 @@ header {
 
 .container>div aside {
   width: 80%;
-  /* height: 100%; */
   background-color: #f5f7fa93;
   padding: 16px;
   box-shadow: 2px 2px 20px 1px #c7c1c1;
@@ -126,7 +128,6 @@ header {
 
 .container>main {
   width: 60%;
-  /* background-color: aqua; */
 }
 
 .container>main>h1 {
@@ -135,10 +136,14 @@ header {
   text-align: center;
 }
 
-.container>main>.student-info {
+.student-info {
   display: flex;
   justify-content: center;
   gap: 20px;
+}
+
+.student-info p {
+  color: #aaa;
 }
 
 .container #questions {
@@ -154,7 +159,6 @@ header {
   width: 100%;
   border-radius: 10px;
   padding: 10px 20px;
-  /* border: 1px black solid; */
   box-shadow: 1px 1px 10px 1px #9c9898;
 }
 
@@ -186,6 +190,10 @@ article ul {
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+article input {
+  margin-inline: 10px;
 }
 
 .submit-container {
