--- a/create account.css
+++ b/create account.css
@@ -1,42 +1,84 @@
-
 body {
     margin: 0;
     padding: 0;
-    background-color: #036172;
     font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
+    height: 100vh;
+    background-color: #036172;
+    /* 
     display: flex;
     justify-content: center;
     align-items: flex-start;
     padding-top: 80px;
-    padding-bottom: 50px; 
+    padding-bottom: 50px; */
+}
+
+
+header {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    padding: 10px;
+    background-color: #ffffffbe;
+    backdrop-filter: blur(10px);
+    box-shadow: 2px 2px 20px 1px #c7c1c1;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+/* logo of univ*/
+.logo {
+    width: 80px;
+    height: 60px;
+}
+
+/* university name*/
+.h-1 {
+    color: black;
+    margin-block: 10px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f7fa93;
+    height: calc(100vh - 80px);
 }
 
 .flex {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 20px;
+    justify-content: space-around;
 }
 
-.login {
-    width: 30%;
-    background-color: #eee;
-    padding: 30px;
+form {
+    width: 60%;
+    background-color: #f0f0f0;
+    box-shadow: 2px 2px 20px 1px #c7c1c1;
+    padding: 10px 30px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login > h2 {
+.login>h2 {
     text-align: center;
     font-size: 35px;
-    margin-bottom: 20px;
+    margin-block: 20px;
     color: #333;
 }
 
-.flex > label {
+.flex>div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.flex h3 {
     align-self: flex-start;
     margin-left: 10px;
     margin-bottom: 5px;
@@ -44,29 +86,32 @@ body {
     color: #333;
 }
 
-.flex > input {
+.flex input {
     width: 100%;
-    box-sizing: border-box; /* مهم عشان padding ما يأثر على العرض */
+    box-sizing: border-box;
     padding: 15px;
     border-radius: 15px;
     border: 1px solid #ccc;
 }
 
-.flex > input:hover {
-    border: 1px solid #007bff;
-}
 
-.flex > button {
-    width: 100%;
-    padding: 15px;
+form .submit {
+    text-align: center;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    width: 50%;
+    padding: 12px;
     background-color: #007bff;
+    box-shadow: 1px 1px 10px 1px #aaa;
     color: white;
     border: none;
     border-radius: 20px;
     cursor: pointer;
 }
 
-.flex > button:hover {
+.flex>button:hover {
     background-color: #0056b3;
 }
 
